package com.codecool.airlinemanagement.airlineEmployee;

import java.time.LocalDate;

public abstract class AirlineEmployee {
    private String name;
    private LocalDate birthDate;

    public AirlineEmployee(String name, LocalDate birthDate) {
        this.name = name;
        this.birthDate = birthDate;
    }

    public String getName() {
        return name;
    }

    public LocalDate getBirthDate() {
        return birthDate;
    }
}
