package com.codecool.airlinemanagement.airlineEmployee.flightAttendant;

public enum Language {
    ENGLISH,
    GERMAN,
    SPANISH,
    POLISH
}
