package com.codecool.airlinemanagement.airlineEmployee.pilot;

public enum PilotFunction {
    CAPTAIN,
    COPILOT
}
